# ComfyUI-SyntaxNodes

./: .gitattributes  .gitignore  AUDIO_REACTIVE_GUIDE.md  LuminanceParticleNode.py  README.md  __init__.py  audio_envelope_handler.py  audio_reactive_template.py  cyberpunk_magnify_node.py  cyberpunk_window_node.py  depth_to_lidar_effect_node.py  edge_measurement_overlay_node.py  edge_tracing_node.py  flower_shared.py  flower_smooth_video.py  ghosting_afterimage_node.py  jigsaw_puzzle_node.py  low_poly_node.py  ml_sharp_node.py  papercraftnode.py  pixel_scatter_node.py  pointillism.py  preview_3d_gs_node.py  prompt_travel_sampler_node.py  pyproject.toml  region_boundary_node.py  requirements.txt  rgb_streak_node.py  sdcn_feedback_animation.py  sdcn_feedback_animation_audio.py  syntax_feedback_progress.py  syntax_feedback_sampler.py  variable_line_width_effect_node.py  voxel_node.py
docs/: AUDIO_REACTIVE_FINDINGS.md
modules/effects/: effects_handler.py
modules/puzzle_creation/: puzzle_creator.py
syntax_schedule/: BatchFuncs.py  ScheduleFuncs.py  __init__.py
tests/: test_audio_envelope_handler.py  test_audio_feedback_modulation.py  test_feedback_sampler.py  test_syntax_feedback_progress.py  test_syntax_schedule.py  test_syntax_widgets.mjs
web/html/: gsplat_viewer.html
web/js/: preview3dgs.js  syntax_widgets.js
