[project]
name = "syntax-nodes"
description = "A collection of ComfyUI image-processing, sampling, and animation nodes"
version = "1.2.0"
dependencies = [
    "Pillow",
    "opencv-python",
    "numpy",
    "torch",
    "librosa",
    "scipy",
    "mediapipe",
    "pandas",
    "numexpr"
]

[project.urls]
Repository = "https://github.com/SyntaxDiffusion/ComfyUI-SyntaxNodes.git"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "dream-computing"
DisplayName = "syntax-nodes"
Icon = ""
